code25_all/scala/10770952.txt
package scala_test

object Test {
  def main(args: Array[String]) {
    println("Hello, World") 
  }  
}

<console>:1: error: eof expected but '}' found.
       }
       ^

